<resources>
    <string name="app_name">FGTracker</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="schoolPrompt">School Name</string>
    <string name="add_school_title">Input School Name</string>
    <string name="add_grade_title">Input Grade Level</string>
    <string name="add_user_title">Input User Information</string>
    <string name="title_activity_class_actiity">ClassActiity</string>
    <string name="title_activity_grade_select">GradeSelectActivity</string>
    <string name="userPrompt">User Name</string>
    <string name="userEmail">Email</string>
    <string name="title_activity_student_select">Students</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_classroom_name">Classroom Name</string>
    <string name="title_activity_student_info">StudentInfo</string>
    <string name="abdominal_text">Abdominal</string>
    <string name="aerobic_text">Aerobic</string>
    <string name="body_comp_text">Body Comp</string>
    <string name="flexibility_text">Flexibility</string>
    <string name="upper_body_text">Upper Body</string>
    <string name="trunk_text">Trunk</string>
    <string name="student_name_text">Name</string>
    <string name="student_id_text">ID</string>
    <string name="student_age_text">Age</string>
    <string name="student_birthdate_text">Birth Date</string>
    <string name="student_heightinches_text">Height (Inches)</string>
    <string name="student_heightfeet_text">Height (Feet)</string>
    <string name="student_weight_text">Weight</string>
    <string name="fitnesstest_text">Fitness Tests</string>
    <string name="title_activity_flex">Flexibility Test</string>
    <string name="sit_reach_text">Sit &amp; Reach</string>
    <string name="shoulder_text">Shoulder Reach</string>
    <string name="title_activity_trunk">TrunkActivity</string>
    <string name="title_activity_abdominal_tests">Abdominal</string>
    <string name="title_activity_aerobic_tests">Aerobic</string>
    <string name="title_activity_abdominal">AbdominalActivity</string>
    <string name="title_activity_aerobic">AerobicActivity</string>
    <string name="title_activity_upper_body">UpperBodyActivity</string>


</resources>
