<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="394dp"
    android:columnCount="3"
    android:columnOrderPreserved="true"
    android:rowCount="2">

    <Button
        android:id="@+id/abdominal"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:text="@string/abdominal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aerobic"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:text="@string/aerobic_text"
        app:layout_constraintEnd_toEndOf="@+id/body_comp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/body_comp"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginEnd="24dp"
        android:text="@string/body_comp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/flexibility"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:text="@string/flexibility_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/trunk"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:text="@string/trunk_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upper_body"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginEnd="24dp"
        android:text="@string/upper_body_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>